@@ -4,6 +4,7 @@
  * GForge Cron Job
  *
  * The rest Copyright 2002-2005 (c) GForge Team
+ * Copyright (C) 2009  Sylvain Beucler
  * http://gforge.org/
  *
  * This file is part of GForge.
@@ -57,10 +58,16 @@ for ($i=0; $i<db_numrows($res); $i++) {
 		mkdir ($ssh_dir, 0755);
 	}
 
+	# Set the effective uid/gid to this user, so as to avoid symlink attacks
+	$userinfo = posix_getpwnam($username);
+	posix_setegid($userinfo['gid']);
+	posix_seteuid($userinfo['uid']);
 	$h8 = fopen("$ssh_dir/authorized_keys","w");
 	fwrite($h8,'# This file is automatically generated from your account settings.'."\n");
 	fwrite($h8,$ssh_key);
 	fclose($h8);
+	posix_seteuid(0);
+	posix_setegid(0);
 		
 	system("chown $username:users $homedir_prefix/$username");
 	system("chown $username:users $ssh_dir");
