@@ -39,6 +39,7 @@ gforge (4.8.51-1) experimental; urgency=low
 
 gforge (4.8.1-3+) UNRELEASED; urgency=low
 
+  [ Olivier Berger ]
   * Fix copyright file to mention nusoap.
   * Fix location of Vcs-Bzr: sources repository.
   * Fix problem in use-snoopy-from-distro.dpatch containing .rej changes.
@@ -47,7 +48,10 @@ gforge (4.8.1-3+) UNRELEASED; urgency=low
   * Add provides tag to control for fusionforge.
   * Change default system name to FusionForge instead of GForge.
 
- -- Olivier Berger <olivier.berger@it-sudparis.eu>  Sat, 14 Nov 2009 11:18:43 +0100
+  [ Roland Mas ]
+  * Fix for symlink attack (CVE-2009-3304).
+
+ -- Roland Mas <lolando@debian.org>  Mon, 23 Nov 2009 13:53:17 +0100
 
 gforge (4.8.1-3) unstable; urgency=low
 
